force-app/main/default/objects/PriceBook__mdt/fields/Base_Charge__c.field-meta.xml
<CustomField>
    <fullName>Base_Charge__c</fullName>
    <label>Base Charge</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>