force-app/main/default/objects/PriceBook__mdt/fields/Fast_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Fast_Delivery__c</fullName>
    <label>Fast Delivery</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>