force-app/main/default/objects/PriceBook__mdt/fields/NormalDelivery__c.field-meta.xml
<CustomField>
    <fullName>NormalDelivery__c</fullName>
    <label>NormalDelivery</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>