force-app/main/default/objects/PriceBook__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>